=====================================================================
	Change Log
	Genmod

	This and other information can be found online at
	http://www.genmod.net/

	# $Id$
=====================================================================

Version 2.0 beta 2
- Fixed Edit fact wrong fact if same earlier fact is deleted (sjouke)
- Increased default memory limit to 64M (sjouke)
- Fixed error in PinYin translation if character doesn't exist (sjouke)
- Fixed confighelp page, print english text if other is absent (sjouke)
- Fixed backup doesn't include media files in filemode (Sjouke)
- Fixed religious marriage asso fact (sjouke)
- Fixed admin_maint error if no site selected (sjouke)
- Fixed block summary doesn't show in index edit (sjouke)
- Fixed submitter record edited from wrong gedcom (sjouke)
- Fixed error in import of married names (sjouke)
- Fixed config error message includes html (sjouke)
- Fixed check on empty lockouts (sjouke)
- Fixed no message in restore if other sql files are found (sjouke)
- Fixed show contextual help on/off doesn't work (sjouke)
- Fixed IE bug rerendering the page after AJAX call (sjouke)
- Fixed Relationship chart print version is empty (sjouke)
- Fixed JS error in find ID function (sjouke)
- Fixed invalid sosa number in ancestry book (sjouke)
- Fixed JS error in ajax calls (sjouke)
- Fixed aliveinyear losing firstname letter (sjouke)
- Fixed aliveinyear error in death year estimation (sjouke)
- Fixed update on some external search modules (sjouke)
- Added Familysearch to external searched (sjouke)
- Fixed Google indexing errors om JS feed (sjouke)
- Fixed error in fanchart is character not in font (sjouke)
- Fixed SQL error if quotes are used in topsearch (sjouke)
- Fixed counters not working if Genmod is in subdir (sjouke) 
- Fixed invalid ID throws SQL error (sjouke)
- Added imageviewer resize image to fit in window (sjouke)
- Added add source info to newly created families (sjouke)