@@ -101,6 +101,7 @@
 "META_SURNAME_KEYWORDS";"Add Most Common Surnames to Keywords META field"
 "META_TITLE";"Add to TITLE header tag"
 "NEWS_TYPE";"Type of Genmod News to display on Admin page"
+"GM_NEWS_SERVER";"Server URL of Genmod news server"
 "NICK_DELIM";"Show nickname between:"
 "NN";"(unknown)"
 "NOTE_FACTS_ADD";"General Note Add Facts"
@@ -684,7 +685,7 @@
 "default";"Default"
 "default_form";"City, County, State/Province, Country"
 "default_form_info";"(Default)"
-"default_news_text";"The genealogy information on this website is powered by <a href="http://www.Genmod.net/" target="_blank">Genmod #VERSION#</a>.  This page provides an introduction and overview to this genealogy.<br /><br />To begin working with the data, choose one of the charts from the Charts menu, go to the Individual list, or search for a name or place.<br /><br />If you have trouble using the site, you can click on the Help icon to give you information on how to use the page that you are currently viewing.<br /><br />Thank you for visiting this site."
+"default_news_text";"The genealogy information on this website is powered by <a href="http://www.sourceforge.net/projects/genmod/" target="_blank">Genmod #VERSION#</a>.  This page provides an introduction and overview to this genealogy.<br /><br />To begin working with the data, choose one of the charts from the Charts menu, go to the Individual list, or search for a name or place.<br /><br />If you have trouble using the site, you can click on the Help icon to give you information on how to use the page that you are currently viewing.<br /><br />Thank you for visiting this site."
 "default_news_title";"Welcome to Your Genealogy"
 "default_user";"Create the default administrative user."
 "definitions";"Definitions"
@@ -2415,7 +2416,7 @@
 "total_sources";"Total Sources"
 "total_unic_places";"Total Unique Places"
 "translation_forum";"Genmod Translations forum on Genmod.net"
-"translation_forum_desc";"This <a href="http://www.genmod.net/forum/viewforum.php?f=4" target=_blank><b>link</b></a> opens a new browser window.  You will be redirected to the Translations forum of Genmod, where you can discuss translation topics."
+"translation_forum_desc";"This <a href="http://www.sourceforge.net/projects/genmod" target=_blank><b>link</b></a> opens a new browser window.  You will be redirected to the Translations forum of Genmod, where you can discuss translation topics."
 "translator_tools";"Translator tools"
 "tuesday";"Tuesday"
 "tuesday_1st";"Tu"
